--- a/eas.json
+++ b/eas.json
@@ -1,21 +1,9 @@
 {
-  "build": {
-    "preview": {
+ "build": {
+    "apk": {
       "android": {
         "buildType": "apk"
       }
-    },
-    "preview2": {
-      "android": {
-        "gradleCommand": ":app:assembleRelease"
-      }
-    },
-    "preview3": {
-      "developmentClient": true
-    },
-    "preview4": {
-      "distribution": "internal"
-    },
-    "production": {}
+    }
   }
 }
