--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,10 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
-
+    
     "jsx": "react", // or "react-native" for React Native projects
-    "moduleResolution": "node",
+    "module": "Node16",
+
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "target": "esnext",
