--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Raigamsfa",
+    "name": "RaigamSFA",
     "slug": "raigamsfa",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -10,27 +10,6 @@
     "newArchEnabled": true,
     "splash": {
       "backgroundColor": "#FFFFFF"
-    },
-    "doctor": {
-      "reactNativeDirectoryCheck": {
-        "exclude": [
-          "@mui/icons-material",
-          "expo-checkbox",
-          "undici"
-        ]
-      }
-    },
-    "extends": [
-      "eslint:recommended",
-      "plugin:react/recommended"
-    ],
-    "parserOptions": {
-      "ecmaFeatures": {
-        "jsx": true
-      }
-    },
-    "cli": {
-      "appVersionSource": "remote"
     },
     "ios": {
       "supportsTablet": true,
@@ -73,6 +52,7 @@
         "projectId": "92c42144-c096-47a3-8ff4-1150faf65f9a"
       }
     },
-    "owner": "raigamsfa"
+    "owner": "raigamsfa",
+    "jsEngine": "hermes"
   }
 }
