--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
     "axios": "^1.10.0",
-    "expo": "53.0.16",
+    "expo": "53.0.17",
     "expo-blur": "~14.1.4",
     "expo-checkbox": "~4.1.4",
     "expo-constants": "~17.1.6",
@@ -34,11 +34,11 @@
     "expo-image": "~2.3.2",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.5",
-    "expo-linking": "~7.1.6",
+    "expo-linking": "~7.1.7",
     "expo-location": "~18.1.6",
-    "expo-router": "~5.1.2",
+    "expo-router": "~5.1.3",
     "expo-secure-store": "~14.2.3",
-    "expo-splash-screen": "~0.30.8",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.10",
@@ -55,14 +55,17 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.11.1",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-version-check": "^3.5.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "expo-application": "~6.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jwt-decode": "^2.2.1",
     "@types/react": "~19.0.10",
+    "@types/react-native-version-check": "^3.4.8",
     "@types/react-redux": "^7.1.34",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.25.0",
