--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@expo/metro-config": "^0.20.17",
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/cli": "latest",
     "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-picker/picker": "^2.11.1",
@@ -20,12 +22,14 @@
     "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.21",
     "@react-navigation/stack": "^7.3.3",
     "@reduxjs/toolkit": "^2.8.2",
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
     "axios": "^1.10.0",
-    "expo": "53.0.17",
+    "expo": "53.0.18",
+    "expo-application": "~6.1.5",
     "expo-blur": "~14.1.4",
     "expo-checkbox": "~4.1.4",
     "expo-constants": "~17.1.6",
@@ -44,8 +48,8 @@
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
     "jwt-decode": "^4.0.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.1.0",
     "react-native": "0.79.5",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.24.0",
@@ -59,18 +63,16 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "react-redux": "^9.2.0",
-    "expo-application": "~6.1.5"
+    "react-test-renderer": "^19.0.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
     "@types/jwt-decode": "^2.2.1",
     "@types/react": "~19.0.10",
-    "@types/react-native-version-check": "^3.4.8",
     "@types/react-redux": "^7.1.34",
-    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
-    "typescript": "~5.8.3"
+    "typescript": "^5.8.3"
   },
   "expo": {
     "doctor": {
