--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
-    "@react-navigation/native-stack": "^7.3.21",
+    "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.3.3",
     "@reduxjs/toolkit": "^2.8.2",
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
     "axios": "^1.10.0",
-    "expo": "53.0.18",
+    "expo": "53.0.19",
     "expo-application": "~6.1.5",
     "expo-blur": "~14.1.4",
     "expo-checkbox": "~4.1.4",
@@ -48,8 +48,8 @@
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
     "jwt-decode": "^4.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.1.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.24.0",
@@ -58,13 +58,15 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.11.1",
+    "react-native-tab-view": "^4.1.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-version-check": "^3.5.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "react-redux": "^9.2.0",
-    "react-test-renderer": "^19.0.0",
-    "redux": "^5.0.1"
+    "react-test-renderer": "19.0.0",
+    "redux": "^5.0.1",
+    "expo-print": "~14.1.4"
   },
   "devDependencies": {
     "@types/jwt-decode": "^2.2.1",
@@ -84,10 +86,12 @@
           "ajv-keywords",
           "react-native-vector-icons",
           "@react-native-community/cli",
-          "@react-native-vector-icons/ionicons"
+          "@react-native-vector-icons/ionicons",
+          "react-native-version-check",
+          "react-test-renderer"
         ]
       }
     }
   },
-  "private": true
+  "private": false
 }
