--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "^4.11.1",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-tab-view": "^4.1.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-version-check": "^3.5.0",
