--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "react-native-webview": "13.13.5",
     "react-redux": "^9.2.0",
     "expo-secure-store": "~14.2.3",
-    "expo-checkbox": "~4.1.4"
+    "expo-checkbox": "~4.1.4",
+    "expo-updates": "~0.28.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
