--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "react-redux": "^9.2.0",
     "react-test-renderer": "19.0.0",
     "redux": "^5.0.1",
-    "expo-print": "~14.1.4"
+    "expo-print": "~14.1.4",
+    "expo-updates": "~0.28.17"
   },
   "devDependencies": {
     "@types/jwt-decode": "^2.2.1",
