--- a/app.json
+++ b/app.json
@@ -3,12 +3,10 @@
     "name": "Raigamsfa",
     "slug": "raigamsfa",
     "version": "1.0.0",
-    "orientation": "portrait",
+     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "raigamsfa",
-    "updates": {
-      "url": "https://firebasestorage.googleapis.com/v0/b/sfamobile-1eab9.firebasestorage.app/o/version.json?alt=media&token=475a390f-be20-4aca-8477-5f9e31f7fdda"
-    },
+    
     "runtimeVersion": {
       "policy": "appVersion"
     },
@@ -26,15 +24,6 @@
         ]
       }
     },
-    "extends": [
-      "eslint:recommended",
-      "plugin:react/recommended"
-    ],
-    "parserOptions": {
-      "ecmaFeatures": {
-        "jsx": true
-      }
-    },
     "cli": {
       "appVersionSource": "remote"
     },
@@ -45,9 +34,10 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/icon.png",
-        "backgroundColor": "#FFFFFF"
+        "backgroundColor": "#FFFFFF",
+        "versionCode": 2
       },
-      "edgeToEdgeEnabled": true,
+      "edgeToEdgeEnabled": false,
       "package": "com.raigams.Raigamsfa"
     },
     "web": {
@@ -60,11 +50,11 @@
       [
         "expo-splash-screen",
         {
-          "backgroundColor": "#232323",
-          "image": "./assets/images/splash-icon.png",
+          "backgroundColor": "#0C056D",
+          "image": "./assets/images/splash_screen_logo.png",
           "resizeMode": "contain",
-          "imageResizeMode": "contain",
-          "imageWidth": 1200
+          "imageResizeMode": "contain"
+        
         }
       ],
       "expo-font",
