--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
     "expo-location": "~18.1.6",
+    "expo-print": "~14.1.4",
     "expo-router": "~5.1.3",
     "expo-secure-store": "~14.2.3",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.10",
+    "expo-updates": "~0.28.17",
     "expo-web-browser": "~14.2.0",
     "jwt-decode": "^4.0.0",
     "react": "19.0.0",
@@ -65,9 +67,7 @@
     "react-native-webview": "13.13.5",
     "react-redux": "^9.2.0",
     "react-test-renderer": "19.0.0",
-    "redux": "^5.0.1",
-    "expo-print": "~14.1.4",
-    "expo-updates": "~0.28.17"
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/jwt-decode": "^2.2.1",
