new inmpmation with fix invoce invoice view all ui with

--- a/app.json
+++ b/app.json
@@ -29,7 +29,16 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.raigam.Raigamsfa"
+      "bundleIdentifier": "com.raigam.Raigamsfa",
+      "infoPlist": {
+        "NSLocationWhenInUseUsageDescription": "This app uses your location to enhance your experience.",
+        "NSLocationAlwaysAndWhenInUseUsageDescription": "This app uses your location in the background for tracking purposes.",
+        "NSLocationAlwaysUsageDescription": "This app uses your location in the background for tracking purposes."
+      },
+      "UIBackgroundModes": [
+        "location",
+        "fetch"
+      ]
     },
     "android": {
       "adaptiveIcon": {
@@ -38,7 +47,13 @@
         "versionCode": 2
       },
       "edgeToEdgeEnabled": false,
-      "package": "com.raigams.Raigamsfa"
+      "package": "com.raigams.Raigamsfa",
+      "permissions": [
+        "android.permission.ACCESS_FINE_LOCATION",
+        "android.permission.ACCESS_BACKGROUND_LOCATION",
+        "android.permission.FOREGROUND_SERVICE",
+        "android.permission.FOREGROUND_SERVICE_LOCATION"
+      ]
     },
     "web": {
       "bundler": "metro",
