--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/cli": "latest",
     "@react-native-community/datetimepicker": "8.4.1",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-native-picker/picker": "^2.11.1",
     "@react-native-vector-icons/ionicons": "^12.0.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
@@ -36,6 +37,7 @@
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
+    "expo-image-manipulator": "~13.1.7",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
@@ -67,8 +69,7 @@
     "react-native-webview": "13.13.5",
     "react-redux": "^9.2.0",
     "react-test-renderer": "19.0.0",
-    "redux": "^5.0.1",
-    "expo-image-manipulator": "~13.1.7"
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/jwt-decode": "^2.2.1",
